      calls in some (relatively obscure) cases
    * Reworked MPI to long conversion to work on four bytes at a time
    * TroveChangeSet objects in changesets are now sorted by the
      name/version/flavor of the new trove
    * Thawing ReferencedTroveSet objects now looks up values with a single
      slice instead of one index at a time for a performance improvement

Changes in 2.0.22:
  o Build Changes:
    * The loadSuperClass and loadInstalled methods now returns the loaded
      recipe class so that the loaded class can be referenced anonymously.
      This makes factories more flexible. (CNY-2900)
    * The addPatch source action now takes a "filter" keyword argument
      that provides a command line that can modify the patch; for
      example, by calling the filterdiff program. (CNY-2874)
    * Builds previously failed in some circumstances when Conary
      discovered no need only for :runtime components listed in
      buildRequires.  This has been fixed, and error reporting
      improved for similar classes of bugs in the future. (CNY-2904)

  o Client Changes:
    * The new boolean conaryrc option downloadFirst has been added to
      instruct Conary to download all required changesets from the
      repository before proceeding to update steps. (CNY-2808)

  o Bug Fixes:
    * Conary 2.0.20 introduced a bug adding dependencies to postgres-based
      repositories; this has been resolved.
    * Starting in 2.0.20, dependency resolution started locking the
      database unnecessarily.  This affected rmake dependency resolution,
      and is now resolved.
    * Mirroring code now correctly detects when access control changes
      in the source repository require the generation of absolute
      changesets for mirroring. (CNY-2888)
    * A permission check error for users that only have trove access
      entitlements has been fixed. (CNY-2761)
    * A problem with the autoLoadRecipes config option has been fixed.
      (CNY-2909)