@@ -15,6 +15,11 @@ Changes in @NEW@:
       name/version/flavor of the new trove
     * Thawing ReferencedTroveSet objects now looks up values with a single
       slice instead of one index at a time for a performance improvement
+    * Check the dependencyCache when thawing Dependency objects before
+      thawing them instead of after (helping performance as well as memory
+      usage)
+    * Use a WeakValueDictionary for the dependencyCache instead of an
+      ObjectCache
 
 Changes in 2.0.22:
   o Build Changes:
